<resources>
    <string name="app_name">MaMoRu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passwordReset_title">メールアドレスを入力してください。</string>
    <string name="continue_txt">確認</string>
    <string name="app_title">MaMoRu</string>
    <string name="mail_hint">メールアドレス*</string>
    <string name="password_hint">パスワード*</string>
    <string name="new_register">新規登録</string>
    <string name="register_btn">登録</string>
    <string name="login_txt">ログイン</string>
    <string name="login_btn">ログイン</string>
    <string name="register">新規登録</string>
    <string name="password_reset">パスワードを忘れた</string>
    <string name="name_hint">ニックネーム*</string>
    <string name="birthday">生年月日</string>
    <string name="description">一言</string>
    <string name="next">次へ</string>
    <string name="profile_txt">プロフィール画像設定</string>
    <string name="password_reset_title">パスワードリセット</string>
    <string name="password_reset_btn">リセット</string>
    <string name="family_fragment">ファミリー</string>
    <string name="chat_rooms_fragment">チャット</string>
    <string name="updata_profile_fragment">プロフィール</string>
    <string name="setup_beacon_fragment">ビーコン</string>
    <string name="search_user_hint">ユーザー名</string>
    <string name="user_id_hint">ユーザーID</string>
    <string name="search_title">ユーザー検索</string>
    <string name="family_title">ファミリー</string>
    <string name="updata">更新</string>
    <string name="phone_number_hint">090-○○○○-△△△△</string>
    <string name="not_family">ファミリーが存在しません。\n追加ボタンからユーザーの追加を行ってください。</string>
    <string name="message_hint">メッセージ入力</string>
    <string name="chat_room">チャットルーム</string>
    <string name="beacon_id_txt">ビーコンID:</string>
    <string name="distance_txt">距離：</string>
    <string name="link_beacon_txt">未接続</string>
    <string name="beacon_txt">付近のビーコン一覧</string>
    <string name="nothing_permission_txt">ビーコン機能を利用するために権限が許可されていません。\n権限の許可を行なってください</string>
    <string name="not_beacon">未使用</string>
    <string name="read_message">既読</string>
</resources>