<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/beacon_row_layout">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/beacon_card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/beacon_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_beacon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:text="@string/beacon_id_txt"
                app:layout_constraintBottom_toTopOf="@+id/beacon_id"
                app:layout_constraintStart_toEndOf="@+id/beacon_image"
                app:layout_constraintTop_toTopOf="@+id/beacon_image" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/distance_txt"
                app:layout_constraintBottom_toTopOf="@+id/beacon_distance"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/beacon_id" />

            <TextView
                android:id="@+id/beacon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/beacon_image"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="fjsp;alujrap;u2455355ifj" />

            <TextView
                android:id="@+id/beacon_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/link_beacon"
                app:layout_constraintStart_toStartOf="@+id/beacon_id"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="2.456m" />

            <TextView
                android:id="@+id/link_beacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_beacon_txt"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/beacon_image"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="@+id/beacon_image"
                app:layout_constraintTop_toBottomOf="@+id/beacon_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>